# podo-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  README_ko.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
.boilerplate/validation/: SIMULATION_RUN.md
.claude/: settings.json
.claude/agents/: architect.md  builder.md  planner.md  qa.md  researcher.md  reviewer.md  validator.md
.codex/: config.toml
.github/ISSUE_TEMPLATE/: boilerplate-bug.md  boilerplate-improvement.md
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: crawl-jobs.yml  deploy-api.yml  deploy-worker.yml  e2e-smoke.yml  schema-contract.yml
ai/core/: pyproject.toml
ai/eval/: pyproject.toml
ai/worker/: Dockerfile  pyproject.toml
ai/worker/fixtures/llm_cache/: README.md
ai/worker/src/worker/: __init__.py  __main__.py  _json_util.py  _prompts.py  cache.py  cache_postgres.py  coarse_materialize.py  compare_pairwise.py  config.py  domain_classifier.py  embed_batch.py  embedding.py  grounding.py  llm.py  matching.py  parse_job.py  parse_resume.py  persistence.py  pipeline.py  prefilter.py  rank_aggregate.py  report.py  rerank_listwise.py  scoring_runner.py  verify_matches.py
ai/worker/src/worker/prompts/: jd_extract.md  listwise_rerank.md  match_verifier.md  pairwise_compare.md  rematch_evidence.md  requirement_evidence_match.md  resume_extract.md
ai/worker/tests/: test_aggregate.py  test_compute_fit.py  test_domain_classifier.py  test_embedding.py  test_entry.py  test_grounding.py  test_json_util.py  test_listwise.py  test_llm_cache.py  test_main.py  test_matching.py  test_pairwise.py  test_parse.py  test_persistence.py  test_pipeline.py  test_prefilter.py  test_prompts.py  test_report.py  test_scoring_runner.py  test_verify.py
crawler/: pyproject.toml
crawler/fixtures/: seed_jobs.txt
crawler/src/crawler/: __init__.py  __main__.py  fetch_jobs.py  gate.py  manual.py  persistence.py  run_sources.py  selection.py  store.py
crawler/src/crawler/adapters/: applyin.py  ashby.py  base.py  careerlink.py  conglomerate_doosan.py  conglomerate_hanwha.py  conglomerate_hyundai.py  conglomerate_kt.py  conglomerate_lg.py  conglomerate_login_required.py  conglomerate_samsung.py  conglomerate_sk.py  custom_base.py  finance_kakaobank.py  finance_nh_nonghyup.py  finance_samsung_fire.py  finance_tossbank.py  foreign_amazon.py  foreign_apple.py  foreign_google.py  foreign_meta.py  foreign_microsoft.py  foreign_uber.py  greenhouse.py  greeting.py  incruit.py  kakao.py  lever.py  line.py  naver.py  recruiter_co_kr.py  startup_bithumb.py  startup_bucketplace.py  startup_class101.py  startup_dunamu.py  startup_megazone.py  startup_socar.py  startup_tridge.py  startup_zigbang.py  toss.py  (+2 more)
crawler/src/crawler/sources/: registry.py  registry_seed.py
crawler/tests/: test_ats_adapter.py  test_ats_family.py  test_custom_adapters.py  test_entry.py  test_fetch.py  test_fixture.py  test_gate.py  test_main_exit_code.py  test_persistence.py  test_registry_seed.py  test_run_sources.py  test_selection.py  test_tier2_foreign.py  test_tier3_startup.py  test_tier4_conglomerate.py  test_tier5_finance.py
crawler/tests/fixtures/: ashby_jobs.json  custom_kakao.json  custom_line.json  custom_naver.json  custom_woowa.json  greenhouse_jobs.json  greeting_jobs.json  lever_jobs.json  workday_jobs.json
infra/: docker-compose.yml
podo/: biome.json  vitest.config.ts
scripts/: README.md  e2e.mjs  e2e_account_pii_scan.py  e2e_pii_scan.py  e2e_seed_users.sql  verify.mjs  verify.ps1  verify.sh
(+432 files in other folders)
