[project]
name = "crawler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "core",
    "httpx",
    "beautifulsoup4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawler"]

[tool.uv.sources]
core = { workspace = true }
