[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.24",
    "core",
    "openai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[tool.uv.sources]
core = { workspace = true }
